Fixing sticky tabs overlapping title on longer titles

--- a/UI/Web/src/app/series-detail/series-detail.component.scss
+++ b/UI/Web/src/app/series-detail/series-detail.component.scss
@@ -29,7 +29,6 @@
 
 .nav-tabs.fixed {
   position: fixed;
-  top: 114px;
   z-index: 100;
   background-color: var(--bs-body-bg);
   width: 100%;
